welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:18: error: type mismatch;
 found   : Boolean
 required: Int
	nbAdos ==0
               ^